# CrypticRoute

./: .SRCINFO  .gitignore  Dockerfile  Makefile  PKGBUILD  README.md  a.py  chunks.json  chunks.txt  combined.py  config.toml  crypticroute_cli.py  crypticroute_gui.py  gui.py  input.txt  output.txt  pyproject.toml  received.txt  receiver-script.py  receiver.py  receiver_op.txt  reciever-output.txt  requirements.txt  sender-script.py  sender.py  sent_chunks.json  stealth-receiver.py  stealth-sender.py  temp.py  usage.txt
AES_Library_With_Chunker/: code.py  dencrypted.txt  encrypted.txt  input.txt
AES_withInput/: aes256.cpp  aes256.hpp  code.cpp  input.txt  output.txt
CLI/: cryptic_route_gui.py  cryptic_route_gui2.py  receiver_latest  requirements.txt
Combined/: combined.py  combined2.py  output.txt
Combined2/: aes_encrypt  chunks.txt  key.txt  message.txt  received_output.txt  receiver.py  sender.py
Discover_ip/: receiver.py  sender.py
FileChunker/: chunked_output.txt  fileChunker.py  test_input.txt
GUI/: __init__.py  main.py  qt2.py  qtqt.py
GUI/components/: __init__.py  progress_bars.py  status_window.py
GUI/temp/: chunked.txt
GUI/utils/: __init__.py  redirector.py
GUI_v1/: gui_v1_0.py
IPv4_Packet/: code.py
LoopBackHandling/: chunked_output.txt  decrypted_temp.txt  encrypted_data.txt  fileChunker.py  received_chunks.txt  receiver.py  receiver_bits_output.txt  receiver_decryption_output.txt  receiver_hash_output.txt  receiver_packet_output.txt  receiver_read_output.txt  receiver_reversed_output.txt  reverseFileChunker.py  reversed_output.txt  sender.py  sender_bits_output.txt  sender_chunk_output.txt  sender_encryption_output.txt  sender_hash_output.txt  sender_packet_output.txt  sender_read_output.txt  sender_write_output.txt
ReverseFileChunker/: reversed_output.txt
Scapy/: sender.py  sender2TTL_WORKING.py  sender_Options.py  sender_Options2.py
TEMP/: input.txt  receiver.py  sender.py
TEMP/stealth_output/: sender_latest
TestConfigs/: createTest.sh  input_10.txt  input_11.txt  input_12.txt  input_2.txt  input_3.txt  input_4.txt  input_5.txt  input_6.txt  input_7.txt  input_8.txt  input_9.txt  key_1.txt  key_2.txt  key_3.txt  key_4.txt  key_5.txt  received.txt
Tests/: README.md  conftest.py
Tests/integration/: test_receiver_flow.py
Tests/unit/: test_core.py
crypticroute/: config_loader.py
debian/: changelog  control  copyright  crypticroute.install  rules
gui/: main.py
gui/utils/: constants.py  (+2 more)
paper_implementation/: received_message.txt  receiver.py  sender.py
v0_simpleBroadcast/: receiver.py  sender.py
v2/: gui.py  receiver.py  sender.py
v3_Broadcast/: gui.py  guichanges.py  output.txt  receiver.py  sender.py  shared_key.txt
v3_broadcast_v2/: receiver.py  sender.py
(+18 files in other folders)
